...

            <TextView
                android:id="@+id/txtHello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/txtWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/txtNotHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:textColor="@color/neutral_black_50"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/btnRegister"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btnRegister" />
...

                    <TextView
                        android:id="@+id/txtLoginTo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/txtComphy"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_0"
...

                    <carbon.widget.Button
                        android:id="@+id/btnGoogleLogin"
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="wrap_content"
...
                        android:layout_height="1dp"
                        android:background="@color/neutral_black_30"
                        app:layout_constraintBottom_toBottomOf="@id/txtOr"
                        app:layout_constraintEnd_toStartOf="@id/txtOr"
                        app:layout_constraintStart_toStartOf="@id/btnGoogleLogin"
...

                    <TextView
                        android:id="@+id/txtYourEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <carbon.widget.EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/txtYourPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/btnForgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                            <carbon.widget.EditText
                                android:id="@+id/edtPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
...

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnLogin"
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="wrap_content"
...
